# dictator

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dictator.entitlements  Dictator.icns  Dictator.spec  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.txt  audio.py  main.py  pyproject.toml  transcriber.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
