[project]
name = "dictator"
version = "1.0.1"
description = "Push-to-talk speech-to-text using whisper.cpp"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT with Commons Clause"}
dependencies = [
    "pynput>=1.7",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "pywhispercpp>=1.4",
    "pillow>=12.1.0",
    "rumps>=0.4.0",
]

[project.optional-dependencies]
dev = ["pyinstaller>=6.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
